fix: center-aligned label

--- a/src/webview/main/style.css
+++ b/src/webview/main/style.css
@@ -33,7 +33,7 @@ p { margin: 0; line-height: 1.45; word-break: break-word; }
 
 .upn-analytics { display: flex; justify-content: space-between; margin: 10px 0 20px; border:1px solid var(--vscode-panel-border);  border-radius: 4px; background-color: var(--vscode-editor-background);  }
 .upn-stat { display: flex; flex:1; flex-direction: column; align-items: center;  padding: 10px; }
-.upn-analytics .label { font-size: 1.2rem; color: var(--vscode-descriptionForeground); }
+.upn-analytics .label { font-size: 1.2rem; color: var(--vscode-descriptionForeground); text-align: center; }
 .upn-analytics .value { margin: 0 0 1rem; font-size: 2rem; font-weight: 600; }
 
 .upn-title { font-weight: 600; margin: 0 0 4px 0; }
@@ -53,6 +53,8 @@ p { margin: 0; line-height: 1.45; word-break: break-word; }
 .time-group::before { content:"" ; position: absolute; top: 12px; left: 0px; width: 8px; bottom: 0px; border: 1px dashed var(--vscode-panel-border); border-right:none; border-radius: 4px 0 0 4px; }
 .time-group .timestamp { list-style:none; padding: 4px 0; margin-bottom: 4px; }
 .updates-container { padding: 0; list-style: none; }
+
+.upn-cache-age { display:none; }
 
 /* Switch styles */
 .switch { position: relative; display: inline-block; width: 50px; height: 20px; flex-shrink: 0; }
